--- a/Lab8/Lab8.vcxproj
+++ b/Lab8/Lab8.vcxproj
@@ -117,6 +117,7 @@
     <ClInclude Include="HeapPriorityQueue.h" />
     <ClInclude Include="LinkedPriorityQueue.h" />
     <ClInclude Include="Node.h" />
+    <ClInclude Include="TMGtoGraph.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dijkstra.cpp" />
@@ -125,6 +126,7 @@
     <ClCompile Include="LinkedPriorityQueue.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Node.cpp" />
+    <ClCompile Include="TMGtoGraph.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Graph1.txt" />
