--- a/Lab8/Lab8.vcxproj.filters
+++ b/Lab8/Lab8.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="Edge.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TMGtoGraph.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Graph.cpp">
@@ -51,6 +54,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Edge.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TMGtoGraph.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
