--- a/Lab8/Lab8.vcxproj
+++ b/Lab8/Lab8.vcxproj
@@ -126,6 +126,7 @@
     <ClCompile Include="LinkedPriorityQueue.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Node.cpp" />
+    <ClCompile Include="HeapPriorityQueue.cpp" />
     <ClCompile Include="TMGtoGraph.cpp" />
   </ItemGroup>
   <ItemGroup>
