--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,11 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+
+#user defined
+*.o
+*.7z
+*.zip
+.RData
+.Rhistory
+.Rapp.history
